adduser (3.92.0) UNRELEASED; urgency=low

  * NOT RELEASED YET
  * Update French (fr) manpage translation.
    Thanks to Nicolas François. Closes: #377317
  * Update German (de) program translation.
    Thanks to Tobias Toedter. Closes: #377415
  * Update Czech (cs) program translation.
    Thanks to Miroslav Kure. (mh) Closes: #377476

 -- Marc Haber <mh+debian-packages@zugschlus.de>  Sun,  9 Jul 2006 14:27:13 +0200

adduser (3.92) unstable; urgency=low

  * Update French (fr) program translation.
    Thanks to Thomas Huriaux. Closes: #376286
  * do not use systemcall() for passwd call after creating new user.
    This broke our return code checking. Thanks to Alexander Wirt.
  * import NOEXPR from LangInfo.

 -- Marc Haber <mh+debian-packages@zugschlus.de>  Fri,  7 Jul 2006 08:17:43 +0000

adduser (3.91) unstable; urgency=low

  * Revert usage of systemcall for chage invocation. (sg)
    Thanks to Junichi Uekawa, Martin Lohmeier and Matt Kraai.
    Closes: #375524, #375720, #375510
  * testsuite changes:
    - testsuite now wrapped in shadowconfig {off,on} calls to avoid
      these sorts of failures in the future. (sg/mh)
    - change assert to exit 1 if $condition, as it did not seem to in previous
      tests. (sg)
    - Also make test8.pl able to handle being called multiple times in
      a row. (sg)
    - Correctly handle non-zero exit codes in tests. (mh)
    - Have runsuite list failed tests at end. (mh)

 -- Marc Haber <mh+debian-packages@zugschlus.de>  Tue, 27 Jun 2006 19:37:47 +0000

adduser (3.90) unstable; urgency=low

  * 3.89 is not an NMU, I botched up the changelog. Fixing.

 -- Marc Haber <mh+debian-packages@zugschlus.de>  Fri, 23 Jun 2006 14:23:00 +0000

adduser (3.89) unstable; urgency=low

  * Add additional check to testsuite/test8.pl to make sure system users are
    not added to extra groups. (sg)
  * New translations:
    - lt (Gintautas Miliauskas <gintas@akl.lt>) (sg) Closes: #374316