@@ -22,7 +22,7 @@ my $version = "VERSION";
 #
 # You should have received a copy of the GNU General Public License
 # along with this program; if not, write to the Free Software
-# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+# Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
 
 ####################
 # See the usage subroutine for explanation about how the program can be called
@@ -205,11 +205,11 @@ if($action eq "deluser") {
 	if( ($dummy1,$dummy2,$uid) = getpwnam($user) ) {
 	    if ( ($uid < $config{"first_system_uid"} ||
 		$uid > $config{"last_system_uid" } ) ) {
-		printf (gtx("The user `%s' is not a system account... Exiting.\n"), $user) if $verbose;
+		printf (gtx("The user `%s' is not a system account ... Exiting.\n"), $user) if $verbose;
 		exit 1;
 	    }
         } else {
-	    printf (gtx("The user `%s' does not exist, but --system was given... Exiting.\n"), $user) if $verbose;
+	    printf (gtx("The user `%s' does not exist, but --system was given ... Exiting.\n"), $user) if $verbose;
 	    exit 0;
 	}
     }
@@ -220,10 +220,10 @@ if($action eq "deluser") {
 
 
     if($config{"remove_home"} || $config{"remove_all_files"}) {
-      s_print (gtx("Looking for files to backup/remove...\n"));
+      s_print (gtx("Looking for files to backup/remove ...\n"));
       my @mountpoints;
       open(MOUNT, "mount |")
-	      || fail (4 ,gtx("fork for parse mount points failed: %s\n", $!));
+	      || fail (4 ,gtx("fork for `mount' to parse mount points failed: %s\n", $!));
       while (<MOUNT>) {
 	      my @temparray = split;
 	      my $fstype = $temparray[4];
@@ -233,7 +233,7 @@ if($action eq "deluser") {
 	      }
 	      push @mountpoints,$temparray[2];
       }
-      close(MOUNT) or die (gtx("can't close mount pipe: %s\n",$!));
+      close(MOUNT) or die (gtx("pipe of command `mount' could not be closed: %s\n",$!));
       my(@files,@dirs);
       if($config{"remove_home"} && ! $config{"remove_all_files"}) {
 
@@ -303,7 +303,7 @@ if($action eq "deluser") {
       }
 
       if(@files || @dirs) {
-	  s_print (gtx("Removing files...\n"));
+	  s_print (gtx("Removing files ...\n"));
 	  unlink(@files) if(@files);
 	  foreach(reverse(sort(@dirs))) {
 	      rmdir($_);
@@ -318,7 +318,7 @@ if($action eq "deluser") {
       s_print (gtx("Removing crontab\n"));
     }
 
-    s_printf (gtx("Removing user `%s'...\n"),$user);
+    s_printf (gtx("Removing user `%s' ...\n"),$user);
     my $userdel = &which('userdel');
     &systemcall($userdel, $user);
     &invalidate_nscd();
@@ -326,7 +326,7 @@ if($action eq "deluser") {
     systemcall('/usr/local/sbin/deluser.local', $user, $pw_uid,
                 $pw_gid, $pw_homedir) if (-x "/usr/local/sbin/deluser.local");
 
-    s_print (gtx("done.\n"));
+    s_print (gtx("Done.\n"));
     exit 0;
 }
 
@@ -343,7 +343,7 @@ if($action eq "delgroup") {
     if( $config{"system"} && 
 	($gid < $config{"first_system_gid"} ||
 	 $gid > $config{"last_system_gid" } )) {
-        printf (gtx("The group `%s' is not a system group... Exiting.\n"), $group) if $verbose;
+        printf (gtx("The group `%s' is not a system group ... Exiting.\n"), $group) if $verbose;
 	exit 3;
     }
     if( $config{"only_if_empty"} && $members ne "") {
@@ -358,11 +358,11 @@ if($action eq "delgroup") {
     }
     endpwent;
 
-    s_printf (gtx("Removing group `%s'...\n"),$group);
+    s_printf (gtx("Removing group `%s' ...\n"),$group);
     my $groupdel = &which('groupdel');
     &systemcall($groupdel,$group);
     &invalidate_nscd();
-    s_print (gtx("done.\n"));
+    s_print (gtx("Done.\n"));
     exit 0;
 }
 
@@ -394,12 +394,12 @@ if($action eq "deluserfromgroup")
 	fail (6, gtx("The user `%s' is not a member of group `%s'.\n"),$user,$group);
     }
 
-    s_printf (gtx("Removing user `%s' from group `%s'...\n"),$user,$group);
+    s_printf (gtx("Removing user `%s' from group `%s' ...\n"),$user,$group);
     #systemcall("usermod","-G", join(",",@groups), $user );
     my $gpasswd = &which('gpasswd');
     &systemcall($gpasswd,'-M', join(',',@members), $group);
     &invalidate_nscd();
-    s_print (gtx("done.\n"));
+    s_print (gtx("Done.\n"));
 }
 
 
@@ -413,9 +413,9 @@ sub fail {
 }
 
 sub version {
-    printf ("deluser: (version: %s)\n\n", $version);
-    printf (gtx("removing user and groups from the system. "));
-
+    printf (gtx("deluser (version: %s)\n\n"), $version);
+    printf (gtx("Removes users and groups from the system."));
+    
     printf gtx("Copyright (C) 2000 Roland Bauerschmidt <roland\@copyleft.de>\n\n");
 
     printf gtx("deluser is based on adduser by Guy Maor <maor\@debian.org>, Ian Murdock\n".
@@ -433,29 +433,29 @@ General Public License, /usr/share/common-licenses/GPL, for more details.\n");
 }
 
 sub usage {
-    printf ("deluser: (version %s)\n\n", $version);
-    printf gtx("removing user and groups from the system. Version:");
-
-    printf gtx("deluser user
+    printf (gtx("deluser (version: %s)\n\n"), $version);
+    printf gtx("Removes users and groups from the system.");
+    
+    printf gtx("deluser USER
   remove a normal user from the system
   example: deluser mike
 
   --remove-home             remove the users home directory and mail spool
   --remove-all-files        remove all files owned by user
-  --backup		    backup files before removing.
-  --backup-to <dir>         target directory for the backups.
+  --backup                  backup files before removing.
+  --backup-to <DIR>         target directory for the backups.
                             Default is the current directory.
   --system                  only remove if system user
 
-delgroup group
-deluser --group group
+delgroup GROUP
+deluser --group GROUP
   remove a group from the system
   example: deluser --group students
 
   --system                  only remove if system group
   --only-if-empty           only remove if no members left
 
-deluser user group
+deluser USER GROUP
   remove the user from a group
   example: deluser mike students
 
